Add avatar system and update UI color scheme
diff --git a/mobile/1-Home/home.html b/mobile/1-Home/home.html
index 5973cf3..de1c6cc 100644
--- a/mobile/1-Home/home.html
+++ b/mobile/1-Home/home.html
@@ -17,23 +17,6 @@ index 5973cf3..de1c6cc 100644
                 margin: 0;
                 padding: 0;
                 box-sizing: border-box;
-            }
-
-            body {
-                background-color: var(--dark-bg);
-                font-family: 'Poppins', sans-serif;
-                color: var(--text-color);
-                line-height: 1.6;
-                margin: 0;
-                padding: 20px;
-                min-height: 100vh;
-                display: flex;
-                flex-direction: column;
-            }
-
-            .main-content {
-                flex: 1;
-                margin-bottom: 60px;
-            }

 Human: You are an expert at writing Git commits. Your job is to write a short clear commit message that summarizes the changes.

The changes show:
1. Integration of an avatar system in the home page
2. Visual changes to make user cards white with orange borders
3. Updating reward and task item styles to match new color scheme

Please write a concise commit message following the Git style guidelines provided.

--- a/mobile/1-Home/home.html
+++ b/mobile/1-Home/home.html
@@ -13,6 +13,7 @@
             href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
             rel="stylesheet"
         />
+        <link rel="stylesheet" href="/BeeMazing-A1/shared/avatar-styles.css">
         <style>
             * {
                 margin: 0;
@@ -93,7 +94,7 @@
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
-                background: var(--primary-color); /* yellow background */
+                background: #FFFFFF; /* white background for avatars */
                 padding: 15px;
                 margin: 10px 0;
                 border-radius: 10px;
@@ -101,15 +102,16 @@
                 transition:
                     transform 0.3s ease,
                     box-shadow 0.3s ease;
-                border: 2px solid var(--primary-color); /* yellow border */
-                color: white;
+                border: 2px solid #FBB740; /* orange border */
+                color: #5D4E41; /* warm brown text */
             }
             .user-list-item:hover {
                 transform: translateY(-5px);
-                box-shadow: 0 6px 20px rgba(0, 0, 0, 0.15);
+                box-shadow: 0 4px 12px rgba(251, 183, 64, 0.3);
+                border-color: #5D4E41;
             }
             .remove-user-btn {
-                background: #8b4513;
+                background: #FBB740;
                 color: white;
                 border: none;
                 border-radius: 50%;
@@ -126,13 +128,13 @@
                     transform 0.2s ease;
             }
             .remove-user-btn:hover {
-                background-color: #a0522d;
+                background-color: #5D4E41;
                 transform: scale(1.1);
             }
 
             .settings-btn {
                 font-size: 16px; /* Adjust size if different from X button */
-                color: #8b4513;
+                color: #5D4E41;
             }
 
             .footer {
@@ -507,6 +509,7 @@
             src="https://kit.fontawesome.com/a076d05399.js"
             crossorigin="anonymous"
         ></script>
+        <script src="/BeeMazing-A1/shared/avatar-system.js"></script>
         <script src="home.js"></script>
     </body>
 </html>
