--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -139,9 +139,9 @@ body {
 
 .task-item {
     padding: 16px;
-    background: #2A2B32;
-    color: #FFFFFF;
-    border: 2px solid var(--border-dark);
+    background: #FFFFFF;
+    color: #5D4E41;
+    border: 2px solid #FBB740;
     border-radius: 12px;
     margin-bottom: 12px;
     cursor: pointer;
@@ -198,7 +198,8 @@ body {
 
 .task-item:hover {
     transform: translateY(-5px);
-    box-shadow: 0 0 8px rgba(255, 193, 7, 0.3);
+    box-shadow: 0 4px 12px rgba(251, 183, 64, 0.3);
+    border-color: #5D4E41;
 }
 
 
@@ -206,7 +207,7 @@ body {
 
 .task-progress {
     font-size: 14px;
-    color: #FFD54F;
+    color: #FBB740;
     margin-top: 5px;
 }
 
