--- a/mobile/2-UserProfiles/userTasks.html
+++ b/mobile/2-UserProfiles/userTasks.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BeeMazing Profile</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/BeeMazing-A1/shared/avatar-styles.css">
     <style>
         * {
             margin: 0;
@@ -1638,12 +1639,7 @@ async function loadUserTasks(userName, selectedDate = new Date().toLocaleDateStr
 
         </script>
 
-
-
-
-
-
-
+    <script src="/BeeMazing-A1/shared/avatar-system.js"></script>
 
 
 
