--- a/mobile/2-UserProfiles/usermarket.html
+++ b/mobile/2-UserProfiles/usermarket.html
@@ -460,12 +460,18 @@ document.querySelectorAll('.footer a').forEach(link => {
             rewardCounts[req.rewardName] = (rewardCounts[req.rewardName] || 0) + 1;
         });
 
-        // Filter market rewards
+        // Filter market rewards - exclude one-time rewards already claimed by this user
         const filteredRewards = marketRewards.filter(reward => {
-            if (!reward.assignedUsers || reward.assignedUsers.length === 0) {
-                return true;
+            // Check if user is assigned to this reward
+            const isAssigned = !reward.assignedUsers || reward.assignedUsers.length === 0 || reward.assignedUsers.includes(userName);
+            if (!isAssigned) return false;
+
+            // For one-time rewards, check if user has already claimed it
+            if (reward.type === 'oneTime' && reward.claimedBy && reward.claimedBy.includes(userName)) {
+                return false;
             }
-            return reward.assignedUsers.includes(userName);
+
+            return true;
         });
 
         // Only show rewards that are in marketRewards or are usable (The Key or dice) in userRewards
@@ -487,6 +493,7 @@ document.querySelectorAll('.footer a').forEach(link => {
                 const userRewardInfo = userRewards.find(r => r.name === rewardName) || {};
                 const rewardType = marketInfo.type || userRewardInfo.type || 'normal';
                 const rewardCost = marketInfo.honey || marketInfo.diamonds || 0;
+                const isOneTime = marketInfo.type === 'oneTime';
                 const outcomes = marketInfo.outcomes || userRewardInfo.outcomes || [];
                 const isTheKey = rewardName === "The Key";
                 const isDiceChest = rewardType === "dice";
@@ -511,10 +518,11 @@ document.querySelectorAll('.footer a').forEach(link => {
                         </button>
                     `;
                 } else {
+                    const buttonText = isOneTime ? 'Claim Once' : 'Get It';
                     buttonContent = `
                         <button class="mt-2 px-3 py-1 rounded font-semibold ${canAfford ? 'btn-primary' : 'btn-disabled'}" 
                             ${canAfford ? '' : 'disabled'} 
-                            onclick="claimReward('${userName}', '${rewardName}', '${rewardType}', ${rewardCost}, '${JSON.stringify(outcomes)}')">Get It</button>
+                            onclick="claimReward('${userName}', '${rewardName}', '${rewardType}', ${rewardCost}, '${JSON.stringify(outcomes)}')">${buttonText}</button>
                     `;
                 }
 
@@ -605,7 +613,43 @@ async function claimReward(userName, rewardName, rewardType, honey, outcomes) {
             return;
         }
 
-        // Deduct points immediately
+        // Fetch market rewards to check reward type and claim status
+        const marketResponse = await fetch(`https://beemazing1.onrender.com/api/market-rewards?adminEmail=${encodeURIComponent(adminEmail)}`);
+        const marketData = await marketResponse.json();
+        if (!marketResponse.ok) throw new Error(marketData.error || "Failed to fetch market rewards");
+        const marketRewards = marketData.rewards || [];
+
+        // Find the specific reward
+        const reward = marketRewards.find(r => r.name === rewardName);
+        if (!reward) {
+            alert("This reward is no longer available.");
+            return;
+        }
+
+        // Check if this is a one-time reward and user has already claimed it
+        if (reward.type === 'oneTime' && reward.claimedBy && reward.claimedBy.includes(userName)) {
+            alert("You have already claimed this one-time reward!");
+            return;
+        }
+
+        // For one-time rewards, update the claimedBy array
+        if (reward.type === 'oneTime') {
+            if (!reward.claimedBy) {
+                reward.claimedBy = [];
+            }
+            reward.claimedBy.push(userName);
+
+            // Update the reward in the database
+            const updateResponse = await fetch("https://beemazing1.onrender.com/api/market-rewards", {
+                method: "POST",
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify({ adminEmail, rewards: marketRewards })
+            });
+            const updateData = await updateResponse.json();
+            if (!updateResponse.ok) throw new Error(updateData.error || "Failed to update reward status");
+        }
+
+        // Deduct points and submit reward request
         const response = await fetch("https://beemazing1.onrender.com/api/reward-request", {
             method: "POST",
             headers: { "Content-Type": "application/json" },
@@ -614,13 +658,19 @@ async function claimReward(userName, rewardName, rewardType, honey, outcomes) {
                 user: userName,
                 rewardName,
                 rewardCost: honey,
-                deductPoints: true
+                deductPoints: true,
+                rewardType: reward.type || 'continuous'
             })
         });
         const data = await response.json();
         if (!response.ok) throw new Error(data.error || "Failed to submit reward request");
 
-        alert("Reward request submitted for approval! Points deducted.");
+        if (reward.type === 'oneTime') {
+            alert("One-time reward claimed successfully! Points deducted.");
+        } else {
+            alert("Reward request submitted for approval! Points deducted.");
+        }
+        
         loadRewards(userName); // Refresh rewards and history
     } catch (err) {
         console.error(`Error requesting ${rewardName}:`, err);
