--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -1325,6 +1325,20 @@ h3 {
             <div id="yourTasks" class="task-list" style="display: none; padding: 0 10px 10px;"></div>
           </div>
 
+          <div class="admin-card" id="asNeededCard" style="flex-direction: column; align-items: stretch;">
+            <div style="display: flex; justify-content: space-between; align-items: center;">
+              <div class="card-left">
+                <span class="card-icon">⚡</span>
+                <span class="card-title">As Needed Tasks</span>
+              </div>
+              <div class="card-right">
+                <span class="card-count" id="asNeededCount">(0)</span>
+                <span class="card-arrow" id="asNeededArrow">›</span>
+              </div>
+            </div>
+            <div id="asNeededTasks" class="task-list" style="display: none; padding: 0 10px 10px;"></div>
+          </div>
+
 
 
 
@@ -3137,6 +3151,153 @@ yourCard.addEventListener("click", () => {
 
 
 
+
+// As Needed Tasks functionality
+async function loadAsNeededTasks() {
+  const asNeededContainer = document.getElementById("asNeededTasks");
+  const asNeededCount = document.getElementById("asNeededCount");
+  const asNeededArrow = document.getElementById("asNeededArrow");
+
+  asNeededContainer.innerHTML = "<p>Loading...</p>";
+
+  try {
+    const res = await fetch(`https://beemazing1.onrender.com/api/tasks?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`, {
+      cache: "no-store"
+    });
+    const data = await res.json();
+    if (!res.ok) throw new Error(data.error || "Failed to load tasks");
+
+    const allTasks = data.tasks || [];
+    
+    // Filter for As Needed tasks
+    const asNeededTasks = allTasks.filter(task => {
+      return task && task.repeat === "As Needed" && task.asNeeded === true;
+    });
+
+    asNeededCount.textContent = `(${asNeededTasks.length})`;
+
+    if (asNeededTasks.length === 0) {
+      asNeededContainer.innerHTML = "<p>No as needed tasks found.</p>";
+      return;
+    }
+
+    asNeededContainer.innerHTML = "";
+    asNeededTasks.forEach(task => {
+      const taskElement = document.createElement("div");
+      taskElement.className = "task-item";
+      taskElement.style.cssText = `
+        background: var(--light-bg);
+        border: 1px solid var(--secondary-color);
+        border-radius: 8px;
+        padding: 12px;
+        margin-bottom: 8px;
+        cursor: pointer;
+        transition: all 0.2s ease;
+      `;
+
+      const activateBtn = document.createElement("button");
+      activateBtn.textContent = task.activated ? "Deactivate" : "Activate";
+      activateBtn.style.cssText = `
+        background: ${task.activated ? '#d32f2f' : 'var(--primary-color)'};
+        color: white;
+        border: none;
+        padding: 6px 12px;
+        border-radius: 4px;
+        cursor: pointer;
+        font-size: 12px;
+        margin-left: 10px;
+      `;
+
+      activateBtn.addEventListener('click', async (e) => {
+        e.stopPropagation();
+        await toggleAsNeededTask(task.title, !task.activated);
+      });
+
+      taskElement.innerHTML = `
+        <div style="display: flex; justify-content: space-between; align-items: center;">
+          <div>
+            <div style="font-weight: 600; color: var(--text-color); margin-bottom: 4px;">${task.title}</div>
+            <div style="font-size: 12px; color: #666; margin-bottom: 4px;">
+              ${task.settings || 'Individual'} • ${task.users ? task.users.join(', ') : 'No users'}
+            </div>
+            <div style="font-size: 11px; color: #888;">
+              Status: ${task.activated ? 'Active' : 'Inactive'}
+            </div>
+          </div>
+        </div>
+      `;
+
+      taskElement.appendChild(activateBtn);
+      asNeededContainer.appendChild(taskElement);
+
+      taskElement.addEventListener('click', () => {
+        editAsNeededTask(task);
+      });
+    });
+
+  } catch (error) {
+    console.error("Error loading as needed tasks:", error);
+    asNeededContainer.innerHTML = `<p style="color: red;">Error: ${error.message}</p>`;
+    asNeededCount.textContent = "(!)";
+  }
+}
+
+async function toggleAsNeededTask(title, activate) {
+  try {
+    const response = await fetch("https://beemazing1.onrender.com/api/toggle-as-needed-task", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ 
+        adminEmail: adminEmail, 
+        title: title, 
+        activated: activate 
+      })
+    });
+
+    const data = await response.json();
+    if (!response.ok) throw new Error(data.error || "Failed to toggle task");
+
+    // Show success popup
+    const popup = document.createElement("div");
+    popup.className = "reward-popup";
+    popup.textContent = `Task ${activate ? 'activated' : 'deactivated'} successfully!`;
+    document.body.appendChild(popup);
+    setTimeout(() => {
+      popup.remove();
+      loadAsNeededTasks(); // Refresh the list
+    }, 2000);
+
+  } catch (error) {
+    console.error("Error toggling as needed task:", error);
+    const popup = document.createElement("div");
+    popup.className = "reward-popup";
+    popup.style.color = "red";
+    popup.textContent = `Error: ${error.message}`;
+    document.body.appendChild(popup);
+    setTimeout(() => popup.remove(), 3000);
+  }
+}
+
+function editAsNeededTask(task) {
+  const basePath = window.location.pathname.includes('/mobile/') ? '/BeeMazing-A1/mobile' : '/BeeMazing-A1/mobile';
+  const editUrl = `${basePath}/3-Tasks/addtasks.html?admin=${encodeURIComponent(adminEmail)}&editTitle=${encodeURIComponent(task.title)}&editDate=${encodeURIComponent(task.date)}&from=admin`;
+  window.location.href = editUrl;
+}
+
+// Add click handler for As Needed card
+document.getElementById("asNeededCard").addEventListener("click", () => {
+  const taskList = document.getElementById("asNeededTasks");
+  const arrow = document.getElementById("asNeededArrow");
+  
+  if (taskList.style.display === "none") {
+    taskList.style.display = "block";
+    arrow.textContent = "⌄";
+    loadAsNeededTasks();
+  } else {
+    taskList.style.display = "none";
+    arrow.textContent = "›";
+  }
+});
 
   </script>
 
