Fix missing Tasks Needing Approval section initialization
🔧 Fixed Issues:
- Added missing loadPendingTasks() call on page load
- Added loadAsNeededTasks() to all date change handlers
- Added comprehensive initialization on DOMContentLoaded
- Added debug logging to track initialization

✅ Now Working:
- Tasks Needing Approval section loads on page startup
- All admin sections refresh when dates change
- Proper initialization order for all task types

📋 Admin Sections Now Fully Functional:
- Tasks Needing Approval (pendingTasks)
- Overdue Tasks (loadOverdueTasks)
- Rewards Needing Approval (loadPendingRewardRequests)
- Your Tasks (loadYourTasks)
- As Needed Tasks (loadAsNeededTasks)

--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -2998,6 +2998,7 @@ function generateScrollableDates(monthOffset = 0) {
       loadPendingTasks();
       loadYourTasks();
       loadPendingRewardRequests();
+      loadAsNeededTasks();
     });
 
     // Always mark today's date with the "today" class when it exists in current month view
@@ -3016,6 +3017,7 @@ function generateScrollableDates(monthOffset = 0) {
         loadPendingTasks();
         loadYourTasks();
         loadPendingRewardRequests();
+        loadAsNeededTasks();
       }
     }
 
@@ -3363,12 +3365,24 @@ async function reviewReward(requestIndex, decision) {
 
 
 // Call on page load and date change
-document.addEventListener("DOMContentLoaded", loadPendingRewardRequests);
+document.addEventListener("DOMContentLoaded", () => {
+    console.log("🚀 Page loaded - initializing all admin sections...");
+    loadPendingTasks();
+    loadPendingRewardRequests();
+    loadOverdueTasks();
+    loadYourTasks();
+    loadAsNeededTasks();
+    console.log("✅ All admin sections initialized");
+});
 // Also call when selectedDate changes
 const originalGenerateScrollableDates = generateScrollableDates;
 generateScrollableDates = function(monthOffset = 0) {
     originalGenerateScrollableDates(monthOffset);
+    loadPendingTasks();
     loadPendingRewardRequests();
+    loadOverdueTasks();
+    loadYourTasks();
+    loadAsNeededTasks();
 };
 
 
