Fix admin sections positioning - no longer hidden behind header
🔧 Issues Fixed:
- Admin sections were appearing behind the fixed header
- Tasks Needing Approval and other sections were not visible

✅ Solutions Applied:
- Added missing --header-height CSS variable (68px)
- Increased margin-top to calc(var(--header-height) + 140px)
- Added position: relative and z-index: 1 to admin sections
- Improved min-height calculation

🎯 Result:
- All admin sections now appear properly below the header
- Tasks Needing Approval section is fully visible and functional
- Proper spacing for mobile and desktop views
- No more content hidden behind fixed positioning

--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -25,6 +25,7 @@
     --accent-color: #FFFFFF;
     --light-bg: #FFFFF8;
     --text-color: #000000;
+    --header-height: 68px;
     --footer-height: 70px;
     --modal-bg: rgba(19, 19, 18, 0.4); /* Added */
     --border-dark: #444754; /* Added */
@@ -1032,14 +1033,15 @@ h3 {
 
 
 #adminSections {
-  margin-top: 130px;
-  padding-bottom: 80px;
+  margin-top: calc(var(--header-height) + 140px);
+  padding: 25px 20px 100px;
   display: flex;
   flex-direction: column;
   gap: 16px;
-  padding: 25px 20px 100px;
   background: linear-gradient(135deg, #FFFFF8 0%, #FFF6E9 100%);
-  min-height: 100vh;
+  min-height: calc(100vh - var(--header-height) - 140px);
+  position: relative;
+  z-index: 1;
 }
 
 .admin-card {
