FINAL FIX: Admin sections now properly positioned below header
🎯 Issue Resolved:
- Admin sections were hidden behind fixed header
- CSS margin-top was not being applied due to specificity issues

✅ Solution Applied:
- Added !important to all positioning CSS rules
- Set margin-top to 250px with !important
- Increased z-index to 10 for proper layering
- Removed debugging styles (red border, yellow background)

🚀 Result:
- Tasks Needing Approval section now fully visible
- All admin sections properly positioned below header
- Clean professional appearance maintained
- No more content hidden behind header

📱 User Experience:
- Can now access Tasks Needing Approval (3 pending tasks)
- All admin sections properly clickable and expandable
- Proper spacing on all screen sizes

--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -1033,15 +1033,15 @@ h3 {
 
 
 #adminSections {
-  margin-top: calc(var(--header-height) + 140px);
-  padding: 25px 20px 100px;
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
-  background: linear-gradient(135deg, #FFFFF8 0%, #FFF6E9 100%);
-  min-height: calc(100vh - var(--header-height) - 140px);
-  position: relative;
-  z-index: 1;
+  margin-top: 250px !important;
+  padding: 25px 20px 100px !important;
+  display: flex !important;
+  flex-direction: column !important;
+  gap: 16px !important;
+  background: linear-gradient(135deg, #FFFFF8 0%, #FFF6E9 100%) !important;
+  min-height: calc(100vh - 250px) !important;
+  position: relative !important;
+  z-index: 10 !important;
 }
 
 .admin-card {
