--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -1033,13 +1033,13 @@ h3 {
 
 
 #adminSections {
-  margin-top: 180px !important;
-  padding: 16px 20px 100px !important;
+  margin-top: 160px !important;
+  padding: 0 15px 80px !important;
   display: flex !important;
   flex-direction: column !important;
-  gap: 16px !important;
-  background: linear-gradient(135deg, #FFFFF8 0%, #FFF6E9 100%) !important;
-  min-height: calc(100vh - 180px) !important;
+  gap: 8px !important;
+  background: transparent !important;
+  min-height: calc(100vh - 160px) !important;
   position: relative !important;
   z-index: 10 !important;
 }
@@ -1048,17 +1048,17 @@ h3 {
   background: #FFFFFF;
   color: #6D4C41;
   border: 2px solid #FFC107;
-  border-radius: 16px;
-  padding: 20px;
+  border-radius: 12px;
+  padding: 12px 16px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  box-shadow: 0 4px 12px rgba(255, 193, 7, 0.15);
-  font-size: 16px;
+  box-shadow: 0 2px 8px rgba(255, 193, 7, 0.15);
+  font-size: 15px;
   font-weight: 600;
   cursor: pointer;
   transition: all 0.3s ease;
-  margin-bottom: 16px;
+  margin-bottom: 0;
 }
 
 .admin-card:hover {
@@ -1074,13 +1074,13 @@ h3 {
 }
 
 .card-icon {
-    font-size: 28px;
+    font-size: 22px;
     color: #FFC107;
 }
 
 .card-title {
     font-weight: 600;
-    font-size: 18px;
+    font-size: 16px;
     color: #6D4C41;
 }
 
@@ -1092,17 +1092,17 @@ h3 {
 
 .card-count {
     font-weight: 600;
-    font-size: 18px;
+    font-size: 14px;
     color: #6D4C41;
     background: #FFF6E9;
-    padding: 6px 12px;
-    border-radius: 20px;
-    min-width: 32px;
+    padding: 4px 8px;
+    border-radius: 16px;
+    min-width: 24px;
     text-align: center;
 }
 
 .card-arrow {
-    font-size: 24px;
+    font-size: 20px;
     color: #FFC107;
     transition: transform 0.3s ease;
 }
@@ -1122,13 +1122,13 @@ h3 {
 .overdue-task {
   background: #FFFFFF;
   border: 2px solid #FFC107;
-  border-left: 6px solid #D32F2F;
-  border-radius: 12px;
-  padding: 15px;
-  margin-top: 12px;
+  border-left: 4px solid #D32F2F;
+  border-radius: 8px;
+  padding: 10px;
+  margin-top: 6px;
   color: #6D4C41;
-  font-size: 14px;
-  box-shadow: 0 3px 8px rgba(255, 193, 7, 0.2);
+  font-size: 13px;
+  box-shadow: 0 2px 6px rgba(255, 193, 7, 0.2);
   transition: all 0.3s ease;
 }
 .overdue-task:hover {
@@ -1153,13 +1153,13 @@ h3 {
 .pending-task {
   background: #FFFFFF;
   border: 2px solid #FFC107;
-  border-left: 6px solid #FF9800;
-  border-radius: 12px;
-  padding: 15px;
-  margin-top: 12px;
+  border-left: 4px solid #FF9800;
+  border-radius: 8px;
+  padding: 10px;
+  margin-top: 6px;
   color: #6D4C41;
-  font-size: 14px;
-  box-shadow: 0 3px 8px rgba(255, 193, 7, 0.2);
+  font-size: 13px;
+  box-shadow: 0 2px 6px rgba(255, 193, 7, 0.2);
   transition: all 0.3s ease;
 }
 .pending-task:hover {
@@ -1191,13 +1191,13 @@ h3 {
 .reward-request {
     background: #FFFFFF;
     border: 2px solid #FFC107;
-    border-left: 6px solid #4CAF50;
-    border-radius: 12px;
-    padding: 15px;
-    margin-top: 12px;
+    border-left: 4px solid #4CAF50;
+    border-radius: 8px;
+    padding: 10px;
+    margin-top: 6px;
     color: #6D4C41;
-    font-size: 14px;
-    box-shadow: 0 3px 8px rgba(255, 193, 7, 0.2);
+    font-size: 13px;
+    box-shadow: 0 2px 6px rgba(255, 193, 7, 0.2);
     transition: all 0.3s ease;
 }
 .reward-request:hover {
@@ -1263,13 +1263,13 @@ h3 {
 .your-task {
     background: #FFFFFF;
     border: 2px solid #FFC107;
-    border-left: 6px solid #2196F3;
-    border-radius: 12px;
-    padding: 15px;
-    margin-top: 12px;
+    border-left: 4px solid #2196F3;
+    border-radius: 8px;
+    padding: 10px;
+    margin-top: 6px;
     color: #6D4C41;
-    font-size: 14px;
-    box-shadow: 0 3px 8px rgba(255, 193, 7, 0.2);
+    font-size: 13px;
+    box-shadow: 0 2px 6px rgba(255, 193, 7, 0.2);
     transition: all 0.3s ease;
 }
 .your-task:hover {
@@ -1316,13 +1316,13 @@ h3 {
 .as-needed-task {
     background: #FFFFFF;
     border: 2px solid #FFC107;
-    border-left: 6px solid #9C27B0;
-    border-radius: 12px;
-    padding: 15px;
-    margin-top: 12px;
+    border-left: 4px solid #9C27B0;
+    border-radius: 8px;
+    padding: 10px;
+    margin-top: 6px;
     color: #6D4C41;
-    font-size: 14px;
-    box-shadow: 0 3px 8px rgba(255, 193, 7, 0.2);
+    font-size: 13px;
+    box-shadow: 0 2px 6px rgba(255, 193, 7, 0.2);
     transition: all 0.3s ease;
 }
 .as-needed-task:hover {
@@ -1555,7 +1555,7 @@ h3 {
                 <span class="card-arrow" id="approvalArrow">›</span>
               </div>
             </div>
-            <div id="pendingTasks" class="task-list" style="display: none; padding: 0 10px 10px;"></div>
+            <div id="pendingTasks" class="task-list" style="display: none; padding: 0 8px 8px;"></div>
           </div>
 
           <div class="admin-card" id="overdueCard" style="flex-direction: column; align-items: stretch;">
@@ -1569,7 +1569,7 @@ h3 {
                 <span class="card-arrow" id="overdueArrow">›</span>
               </div>
             </div>
-            <div id="overdueTasks" class="task-list" style="display: none; padding: 0 10px 10px;"></div>
+            <div id="overdueTasks" class="task-list" style="display: none; padding: 0 8px 8px;"></div>
           </div>
 
 
@@ -1584,7 +1584,7 @@ h3 {
                     <span class="card-arrow" id="rewardArrow">›</span>
                 </div>
             </div>
-            <div id="rewardTasks" class="task-list" style="display: none; padding: 0 10px 10px;"></div>
+            <div id="rewardTasks" class="task-list" style="display: none; padding: 0 8px 8px;"></div>
         </div>
 
           <div class="admin-card" id="yourCard" style="flex-direction: column; align-items: stretch;">
@@ -1598,7 +1598,7 @@ h3 {
                 <span class="card-arrow" id="yourArrow">›</span>
               </div>
             </div>
-            <div id="yourTasks" class="task-list" style="display: none; padding: 0 10px 10px;"></div>
+            <div id="yourTasks" class="task-list" style="display: none; padding: 0 8px 8px;"></div>
           </div>
 
           <div class="admin-card" id="asNeededCard" style="flex-direction: column; align-items: stretch;">
@@ -1612,7 +1612,7 @@ h3 {
                 <span class="card-arrow" id="asNeededArrow">›</span>
               </div>
             </div>
-            <div id="asNeededTasks" class="task-list" style="display: none; padding: 0 10px 10px;"></div>
+            <div id="asNeededTasks" class="task-list" style="display: none; padding: 0 8px 8px;"></div>
           </div>
 
 
