Update body background to use CSS variable for consistency
✅ Consistency fix:
- Changed body background from hardcoded #FFFFF8 to var(--light-bg)
- Matches the same background approach used in other pages
- Maintains exact same color (#FFFFF8) but uses standardized variable

--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -117,7 +117,7 @@ h3 {
 
     body {
       font-family: 'Poppins', sans-serif;
-      background-color: #FFFFF8;
+      background-color: var(--light-bg);
       color: #FFFFFF;
       margin: 0;
       padding: 0;
